Fixing horizontal scroll

--- a/css/common.css
+++ b/css/common.css
@@ -4,7 +4,6 @@ html, body {
 }
 
 html {
-    overflow: -moz-scrollbars-vertical;
     overflow-y: scroll;
 }
 
